--- a/oopx/CMakeLists.txt
+++ b/oopx/CMakeLists.txt
@@ -8,18 +8,14 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
 
 add_subdirectory(lib)
-add_library(tinyxml)
-aux_source_directory(lib libsrc)
-target_sources(tinyxml PUBLIC ${libsrc})
-
+add_subdirectory(test)
 
 add_executable(oopx)
 aux_source_directory(code source)
 target_sources(oopx PUBLIC ${source})
-target_include_directories(oopx PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/code)
-target_include_directories(oopx PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/lib)
 target_link_libraries(oopx tinyxml)
+target_include_directories(oopx PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/code/include)
+target_include_directories(oopx PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/lib)
 
 enable_testing()
-add_subdirectory(test)
 add_test(NAME mytest COMMAND Test)
