--- a/oopx/test/CMakeLists.txt
+++ b/oopx/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(Test)
+add_executable(Test ./main.cpp)
 aux_source_directory(src test_source)
 target_sources(Test PUBLIC ${test_source})
 target_include_directories(Test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../code/include)
