tuple done，老子就是牛

--- a/oopx/CMakeLists.txt
+++ b/oopx/CMakeLists.txt
@@ -17,5 +17,9 @@ target_link_libraries(oopx tinyxml)
 target_include_directories(oopx PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/lib)
 target_include_directories(oopx PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/code/include)
 
+add_executable(type_test ./typetest.cpp)
+add_executable(tuple_test ./tupletest.cpp)
+# add_executable(struct_test ./structtuple.cpp)
+
 enable_testing()
 add_test(NAME mytest COMMAND Test)
