--- a/oopx/CMakeLists.txt
+++ b/oopx/CMakeLists.txt
@@ -5,17 +5,12 @@ cmake_minimum_required(VERSION 3.15)
 
 project(oop_assignmentx)
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3") # 如果是MSVC请将这里设置为/O3
 
 add_subdirectory(lib)
+add_subdirectory(code)
 add_subdirectory(test)
-
-add_executable(oopx)
-aux_source_directory(code source)
-target_sources(oopx PUBLIC ${source})
-target_link_libraries(oopx tinyxml)
-target_include_directories(oopx PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/lib)
-target_include_directories(oopx PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/code/include)
 
 enable_testing()
 add_test(NAME mytest COMMAND Test)
